--- a/.github/workflows/ai_pr_reviewer_workflow.yml
+++ b/.github/workflows/ai_pr_reviewer_workflow.yml
@@ -1,11 +1,8 @@
-# Apache License
-# Version 2.0, January 2004
-# Author: Eugene Tkachenko
-
 name: Pull Request ChatGPT review
 
 on:
-  pull_request
+  pull_request:
+    types: [opened]
 
 jobs:
   ai_pr_reviewer:
